# lean-edits-analysis

./: .gitignore  CLAUDE.md  README.md  TODO.md  VERSIONS.txt  check-versions.sh  pyproject.toml  pyrightconfig.json  sync.sh
docs/specs/: 2026-05-26-file-view.md  2026-05-26-sidebar-hierarchy.md
src/lean_edits_analysis/: __init__.py  analysis.py  analyze_session.py  common.py  data.py  edit_info.py  main.py  scratchpad.py  util.py
src/lean_edits_analysis/summarize/: main.py
src/lean_edits_analysis/visualize/: build.py  common.py  decl_heat_map.py  diff.py  file_heat_map.py  main.py  server.py
viz/: .gitignore  CONVENTIONS.md  SPEC.md  diff.html  index.html  package.json
viz/src/: data.js  diffPage.js  main.js  shell.js
viz/src/components/: declHeatmap.js  fileHeatmap.js  registry.js
viz/src/lib/: clusterBar.js  dom.js  rangeSlider.js  scales.js
viz/src/styles/: clusterBar.css  declHeatmap.css  diffPage.css  fileHeatmap.css  rangeSlider.css  shell.css
